--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,14 +28,17 @@ jobs:
               uses: actions/checkout@v5
 
             - name: Run Rabbit MQ
-              run: sudo docker run -itd -p 15672:15672 -p 5672:5672 --name rabbitmq rabbitmq:3-management
+              run: |
+                  sudo docker run -itd -p 15672:15672 -p 5672:5672 --network=shadow-net --name rabbitmq rabbitmq:3-management
+                  sleep 30s
               
             - name: Run Docker image
-              run: sudo docker run -itd --link rabbitmq:rabbitmq --name market-app ${{ vars.DOCKER_USERNAME }}/${{ vars.IMAGE_NAME }}:latest
+              run: |
+                  sudo docker run -itd --link rabbitmq:rabbitmq --network=shadow-net --name market-app ${{ vars.DOCKER_USERNAME }}/${{ vars.IMAGE_NAME }}:latest
+                  sleep 30s
 
             - name: Test Docker Image
               run: |
-                  sleep 30s
                   sudo docker exec -it market-app tee /app/test.log
     deploy_job:
         needs: test_job
