--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
             - name: Setup Python
               uses: actions/setup-python@v5
               with:
-                python-version: '3.15.0-alpha.2'
+                python-version: '3.10'
 
             - name: Cache Python dependencies
               uses: actions/cache@v4
@@ -50,7 +50,7 @@ jobs:
             - name: Setup Python
               uses: actions/setup-python@v5
               with:
-                python-version: '3.15.0-alpha.2'
+                python-version: '3.10'
 
             - name: Cache Python dependencies
               uses: actions/cache@v4
