--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,10 +10,10 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v5
 
-            - name: Setup Python
-              uses: actions/setup-python@v5
-              with:
-                python-version: '3.13'
+            #- name: Setup Python
+            #  uses: actions/setup-python@v5
+            #  with:
+            #    python-version: '3.13'
 
             - name: Cache Python dependencies
               uses: actions/cache@v4
@@ -47,10 +47,10 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v5
 
-            - name: Setup Python
-              uses: actions/setup-python@v5
-              with:
-                python-version: '3.13'
+            #- name: Setup Python
+            #  uses: actions/setup-python@v5
+            #  with:
+            #    python-version: '3.13'
 
             - name: Cache Python dependencies
               uses: actions/cache@v4
