--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,9 +27,9 @@ jobs:
             - name: Install Dependencies
               if: steps.pip-cache.outputs.cache-hit != 'true' 
               run: |
-                  python -m pip install --upgrade pip
-                  pip install pytest coverage
-                  pip install -r requirements.txt
+                  python -m pipx install --upgrade pip
+                  pipx install pytest coverage
+                  pipx install -r requirements.txt
 
             - name: Unit Test
               run: pytest
@@ -64,9 +64,9 @@ jobs:
             - name: Install Dependencies
               if: steps.pip-cache.outputs.cache-hit != 'true' 
               run: |
-                  python -m pip install --upgrade pip
-                  pip install pytest coverage
-                  pip install -r requirements.txt
+                  python -m pipx install --upgrade pip
+                  pipx install pytest coverage
+                  pipx install -r requirements.txt
 
             - name: Run Coverage
               run: |
