--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,8 @@ jobs:
               if: steps.pip-cache.outputs.cache-hit != 'true' 
               run: |
                   python3 -m pip install --upgrade pip --break-system-packages
-                  pip install python3-pytest python3-coverage
-                  pip install -r requirements.txt
+                  pip install python3-pytest python3-coverage --break-system-packages
+                  pip install -r requirements.txt --break-system-packages
 
             - name: Unit Test
               run: pytest
@@ -65,8 +65,8 @@ jobs:
               if: steps.pip-cache.outputs.cache-hit != 'true' 
               run: |
                   python3 -m pip install --upgrade pip --break-system-packages
-                  pip install python3-pytest python3-coverage
-                  pip install -r requirements.txt
+                  pip install python3-pytest python3-coverage --break-system-packages
+                  pip install -r requirements.txt --break-system-packages
 
             - name: Run Coverage
               run: |
