--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,11 +28,11 @@ jobs:
               if: steps.pip-cache.outputs.cache-hit != 'true' 
               run: |
                   python3 -m pip install --upgrade pip --break-system-packages
-                  pip install pytest coverage --break-system-packages
+                  pip install pytest coverage pytest-cov --break-system-packages
                   pip install -r requirements.txt --break-system-packages
               
             - name: Unit Test
-              run: pytest
+              run: pytest --junitxml=artifacts/event-test.xml
 
             - name: Archive Test Results
               uses: actions/upload-artifact@v4
@@ -65,13 +65,14 @@ jobs:
               if: steps.pip-cache.outputs.cache-hit != 'true' 
               run: |
                   python3 -m pip install --upgrade pip --break-system-packages
-                  pip install pytest coverage --break-system-packages
+                  pip install pytest coverage pytest-cov --break-system-packages
                   pip install -r requirements.txt --break-system-packages
 
             - name: Run Coverage
               run: |
                   pytest --cov=.
-                  python3 -m coverage report
+                  python3 -m coverage report > coverage/coverage_report.txt
+                  python3 -m coverage xml > coverage/coverage_report.xml
             - name: Archive Code Coverage Results
               uses: actions/upload-artifact@v4
               with:
