--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on: push
 jobs:
     unit_test_job:
         name: Unit Test
-        if: github.ref == 'refs/head/feature'
+        #if: github.ref == 'refs/head/feature'
         runs-on: self-hosted
         steps:
             - name: Checkout
@@ -100,7 +100,7 @@ jobs:
                   cat event-test.xml
     build_image_job:
         name: Docker Containerization
-        #needs: unit_test_job
+        needs: unit_test_job
         #if: github.ref == 'refs/head/main'
         runs-on: self-hosted
         steps:
